08_service.yml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  namespace: __NAMESPACE__
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: privatebin
